Sun May 16 01:17:44 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Deployment.idl:

          Changed the data structures needed by the Execution
          data model, to conform to the model given in the
          specification

        * DnC/Config_Handlers/Plan_Handler.cpp:
        * DnC/Config_Handlers/Plan_Handler.h:
        * DnC/Config_Handlers/Config_Handlers.mpc:
        * DnC/Config_Handlers/Domain_Handler.cpp:

          Added a new top level handler for the DeploymentPlan.

          Since the IDL changed, i had to change 11 other handlers
          and included them within the top level handler.

          Updated the .mpc file accordingly.

Fri May 14 20:53:37 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Deployment.idl:

          Separated the data model definitions from the
          management model definitions.

Fri May 14 15:28:56 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Domain_Handler.cpp:
        * DnC/Config_Handlers/Domain_Handler.h:
        * DnC/tests/Config_Handlers/Domain_Handler_Test.cpp:

          Updated Domain_Handler_Test.cpp to use the dump
          functions within the DnC_Dump.cpp rather than the
          functions from Domain_Handler.cpp.

          Removed the unnecessary functions from the Domain_Handler.cpp.

Fri May 14 15:13:17 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/DnC_Dump.cpp:
        * DnC/Config_Handlers/DnC_Dump.h:

          Added the dump functions for the Domain Handler.

Fri May 14 12:17:55 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Requirement_Handler.cpp:
        * DnC/Config_Handlers/Property_Handler.cpp:
        * DnC/Config_Handlers/SP_Handler.cpp:
        * DnC/Config_Handlers/RS_Handler.cpp:

          Among, the common data type handlers, the aforementioned four
          handlers need to handle elements that can be referenced via